--- a/index.css
+++ b/index.css
@@ -293,3 +293,43 @@ table.guest td {
 	border-right:1px solid black;
 	border-bottom:1px solid black;
 }
+a:link {
+  color:dodgerblue;
+}
+body {
+  margin-bottom:4em;
+}
+#contents {
+  line-height:1.5em;
+  width:80%;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:4em;
+}
+p {
+  text-align:justify;
+  text-indent:1em;
+}
+p.mid-flow, p.no-indent {
+  text-indent:0em;
+}
+h1 {
+  padding:0.5em 0em 0.5em 0.5em;
+  border-width:0px 0px 1px 5px;
+  border-style:solid;
+  border-color:silver;
+  line-height:1.25em;
+}
+h2 {
+  padding:0.5em 0em 0.5em 0.5em;
+  border-width:3px 0px 0px 0px;
+  border-style:solid;
+  border-color:silver;
+}
+h3 {
+  padding:0.5em 0em 0.5em 0.5em;
+  border-width:2px 0px 0px 0px;
+  border-style:solid;
+  border-color:silver;
+  width:11.5em;
+}
