--- a/index.css
+++ b/index.css
@@ -56,15 +56,21 @@ body {
     grid-column: 2;
 }
 
+min {
+	font-size:0.8em;
+}
 .data1 {
     display: grid;
-    grid-template-columns: 3em 3em 3em 3em 3em 3em 3em 3em 3em 3em 3em 3em 3em 3em 1fr;
+    grid-template-columns: 3em 3em 3em 3em 3em 3em 3em 3em 3em 6em 3em 3em 3em 3em 3em 3em 1fr;
     grid-template-rows: auto auto;
     gap: 0px;
     margin: 0 auto;
     border-top: 1px solid black;
 	padding-left:0.2em;
 	padding-right:0.2em;
+}
+.data1 > div:nth-child(6) {
+	text-align:left;
 }
 .temp {
 	text-align:center;
@@ -93,25 +99,25 @@ body {
 }
 .bar {
 	text-align:center;
-    grid-column: 7 / span 2;
+    grid-column: 7 / span 4;
 	border-right: 1px solid black;
 	border-bottom: 1px solid black;
 }
 .depth {
 	text-align:center;
-    grid-column: 9 / span 2;
+    grid-column: 11 / span 2;
 	border-right: 1px solid black;
 	border-bottom: 1px solid black;
 }
 .time{
 	text-align:center;
-    grid-column: 11 / span 4;
+    grid-column: 13 / span 4;
 	border-right: 1px solid black;
 	border-bottom: 1px solid black;
 }
 .sign{
 	text-align:center;
-    grid-column: 15 / span 1;
+    grid-column: 17 / span 1;
 }
 .sign-data {
 	border-bottom: 1px solid black;
