--- a/index.css
+++ b/index.css
@@ -23,7 +23,6 @@ body {
     grid-template-rows: auto auto;
     gap: 0px;
     margin: 0 auto; /* 中央寄せ */
-    border-top: 1px solid black; /* 全体の枠線（デバッグ用） */
 }
 /* 各ボックスの基本スタイル */
 .box {
@@ -139,6 +138,9 @@ min {
     padding: 15px;
     text-align: center;
     min-height: var(--grid-row-height);
+}
+.memo-box > p {
+	text-indent:0em;
 }
 .lg {
 	text-decoration:underline;
@@ -376,4 +378,13 @@ div#notes p:first-child {
 }
 .loglist dd.active {
     display: block;
+}
+.left {
+	float:left;
+}
+.right {
+	float:right;
+}
+.clear {
+	clear:both;
 }
