--- a/index.css
+++ b/index.css
@@ -335,7 +335,7 @@ p {
   text-indent:1em;
 }
 p.mid-flow, p.no-indent {
-  text-indent:0em;
+  text-indent:0em!important;
 }
 h1 {
   padding:0.5em 0em 0.5em 0.5em;
