1999/03/21 (Sun)和歌山県串本町 住崎

--- a/index.css
+++ b/index.css
@@ -412,6 +412,12 @@ div#notes p:first-child {
 figcaption {
 	font-size: 0.7em;
 }
+div.right::after {
+	clear:both;
+}
+div.left::after {
+	clear:both;
+}
 div.right > figure {
   display: inline-block;
   text-align: left;
